syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "com/coralogix/enrichment/v1/custom_enrichment.proto";

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";


package com.coralogix.enrichment.v1;

message File {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "File"
      description: "This data structure represents a file"
      required: []
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/data-transformation/enrichments/custom-enrichment/"
      description: "Find out more about enrichments"
    }
  };

  google.protobuf.StringValue name = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "\"file_name\"" }];
  google.protobuf.StringValue extension = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "\"csv\"" }];
  oneof content {
    google.protobuf.StringValue textual = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "\"row1,row2 value1,value2\"" }];
    google.protobuf.BytesValue binary = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "\"0xFABB32\"" }];
  }
}

message GetCustomEnrichmentRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Get Custom Enrichment Request"
      description: "This is used to retrieve a custom enrichment by id"
      required: []
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/data-transformation/enrichments/custom-enrichment/"
      description: "Find out more about enrichments"
    }
  };
  google.protobuf.UInt32Value id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "1" }];
}

message GetCustomEnrichmentResponse {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Get Custom Enrichment Response"
      description: "This response data structure is obtained when a custom enrichment is retrieved"
      required: [
        "custom_enrichment"
      ]
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/data-transformation/enrichments/custom-enrichment/"
      description: "Find out more about enrichments"
    }
  };
  CustomEnrichment custom_enrichment = 1;
}

message GetCustomEnrichmentsRequest {}

message GetCustomEnrichmentsResponse {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Get Custom Enrichments Response"
      description: "This response data structure is obtained when all custom enrichments are retrieved"
      required: [
        "custom_enrichments"
      ]
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/data-transformation/enrichments/custom-enrichment/"
      description: "Find out more about enrichments"
    }
  };
  repeated CustomEnrichment custom_enrichments = 1;
}

message CreateCustomEnrichmentRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Create Custom Enrichment Request"
      description: "This request data structure is used to create a custom enrichment"
      required: [
        "name",
        "description",
        "file"
      ]
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/data-transformation/enrichments/custom-enrichment/"
      description: "Find out more about enrichments"
    }
  };

  google.protobuf.StringValue name = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "\"custom_enrichment_name\"" }];
  google.protobuf.StringValue description = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "\"custom_enrichment_description\"" }];
  File file = 4;
}

message CreateCustomEnrichmentResponse {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Create Custom Enrichment Response"
      description: "This response data structure is obtained when a custom enrichment is created"
      required: [
        "custom_enrichment"
      ]
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/data-transformation/enrichments/custom-enrichment/",
      description: "Find out more about enrichments"
    }
  };

  string message = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "\"Custom enrichment created successfully\"" }];
  CustomEnrichment custom_enrichment = 2;
}

message UpdateCustomEnrichmentRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Update Custom Enrichment Request"
      description: "This request data structure is used to update a custom enrichment"
      required: [
        "custom_enrichment_id",
        "name",
        "description",
        "file"
      ]
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/data-transformation/enrichments/custom-enrichment/"
      description: "Find out more about enrichments"
    }
  };

  google.protobuf.UInt32Value custom_enrichment_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "1" }];
  google.protobuf.StringValue name = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "\"custom_enrichment_name\"" }];
  google.protobuf.StringValue description = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "\"custom_enrichment_description\"" }];
  File file = 4;
}

message UpdateCustomEnrichmentResponse {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Update Custom Enrichment Response"
      description: "This response data structure is obtained when a custom enrichment is updated"
      required: [
        "custom_enrichment"
      ]
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/data-transformation/enrichments/custom-enrichment/"
      description: "Find out more about enrichments"
    }
  };

  string message = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "\"Custom enrichment updated successfully\"" }];
  CustomEnrichment custom_enrichment = 2;
}

message DeleteCustomEnrichmentRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Delete Custom Enrichment Request"
      description: "This request data structure is used to delete a custom enrichment"
      required: [
        "custom_enrichment_id"
      ]
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/data-transformation/enrichments/custom-enrichment/"
      description: "Find out more about enrichments"
    }
  };
  google.protobuf.UInt32Value custom_enrichment_id = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "1" }];
}


message DeleteCustomEnrichmentResponse {
  string message = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "\"Custom enrichment deleted successfully\"" }];
  uint32 custom_enrichment_id = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "1" }];
}

message SearchCustomEnrichmentDataRequest {

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Search Custom Enrichment Data Request"
      description: "This request data structure is used to search custom enrichment data"
      required: [
        "search_clauses"
      ]
    }
    external_docs: {
      url: "https://coralogix.com/docs/user-guides/data-transformation/enrichments/custom-enrichment/"
      description: "Find out more about enrichments"
    }
  };
  message SearchClause {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
      json_schema: {
        title: "Search Clause"
        description: "This data structure represents a search clause"
        required: [
          "search_by"
        ]
      }
      external_docs: {
        url: "https://coralogix.com/docs/user-guides/data-transformation/enrichments/custom-enrichment/"
        description: "Find out more about enrichments"
      }
    };
    oneof search_by {
      google.protobuf.UInt32Value id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "1" }];
      google.protobuf.StringValue name = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { example: "\"custom_enrichment_name\"" }];
    }
  }
  repeated SearchClause search_clauses = 1;
}

message SearchCustomEnrichmentDataResponse {
  repeated CustomEnrichmentData custom_enrichments_data = 1;
}

service CustomEnrichmentService {
  rpc GetCustomEnrichment(GetCustomEnrichmentRequest) returns (GetCustomEnrichmentResponse) {
    option (google.api.http) = {
      get: "/v1/custom_enrichment/{id}"
    };
  };
  rpc GetCustomEnrichments(GetCustomEnrichmentsRequest) returns (GetCustomEnrichmentsResponse) {
    option (google.api.http) = {
      get: "/v1/custom_enrichment"
    };
  };
  rpc CreateCustomEnrichment(CreateCustomEnrichmentRequest) returns (CreateCustomEnrichmentResponse) {
    option (google.api.http) = {
      post: "/v1/custom_enrichment"
      body: "*"
    };
  };
  rpc UpdateCustomEnrichment(UpdateCustomEnrichmentRequest) returns (UpdateCustomEnrichmentResponse) {
    option (google.api.http) = {
      put: "/v1/custom_enrichment"
      body: "*"
    };
  };
  rpc DeleteCustomEnrichment(DeleteCustomEnrichmentRequest) returns (DeleteCustomEnrichmentResponse) {
    option (google.api.http) = {
      delete: "/v1/custom_enrichment/{custom_enrichment_id}"
    };
  };
  rpc SearchCustomEnrichmentData(SearchCustomEnrichmentDataRequest) returns (SearchCustomEnrichmentDataResponse) {
    option (google.api.http) = {
      post: "/v1/custom_enrichment/search"
    };
  };
}
